--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <script src="https://aframe.io/releases/0.3.2/aframe.min.js"></script>
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script> -->
 
-    <!-- ripped from "open sources" (i.e. i did not make dis) -->
-    <!-- <script src="components/ground.js"></script> -->
+    <!-- ripped from "open sources" (i.e. i did not make these) -->
+    <script src="components/ground.js"></script>
   </head>
   <body>
     <a-scene>
@@ -23,23 +23,32 @@
       <!-- <a-light type="spot" color="#333" position="-20 0 0" look-at="a-box"></a-light>
       <a-light type="point" color="#AAA" position="0 5 0"></a-light> -->
 
-      <a-box id="boxy" depth=1 position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
-      <a-box id="boxyhart" position="-2.25 0.5 -3" rotation="0 00 0" color="#4CC3D9" src="#metal_grill" scale-on-click="to: 0.5 0.5 0.5">
+
+      <a-box id="boxyhart" position="3.5759866544022314 -1.7922944645166807 0" rotation="0 00 0" color="#4CC3D9" src="#metal_grill" scale-on-click="to: 0.5 0.5 0.5">
         <a-animation attribute="rotation" begin="click"  to="0 90 0"></a-animation>
       </a-box>
+        <!-- <a-box id="boxy" depth=1 position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
       <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
       <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
-      <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
+      <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane> -->
       <a-sky color="#ECECEC"></a-sky>
+
+      <a-entity id="enemies">
+        <a-entity id="enemy-grunts">
+        </a-entity>
+        <a-entity id="enemy-orbiters">
+        </a-entity>
+      </a-entity>
 
       <a-entity ground></a-entity>
 
-      <a-camera position="0 1.8 0">
+      <a-camera position="0 1.68 0">
         <a-cursor color="#549234"></a-cursor>
       </a-camera>
     </a-scene>
 
     <script src="js/main.js"></script>
     <script src="js/enemies.js"></script>
+    <script src="js/player.js"></script>
   </body>
 </html>
