--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script> -->
 
     <!-- ripped from "open sources" (i.e. i did not make these) -->
-    <script src="components/ground.js"></script>
+    <!-- <script src="components/ground.js"></script> -->
   </head>
   <body>
     <a-scene>
