--- a/index.html
+++ b/index.html
@@ -17,24 +17,25 @@
         <img id="city" src="assets/city.jpg">
       </a-assets>
 
-      <a-sky id="image-360" radius="30" color="#dddddd" src="#city"></a-sky>
+      <!-- Sky. -->
+      <a-sky id="image-360" radius="100" color="#dddddd" src="#city"></a-sky>
 
       <!-- New lights. -->
       <!-- <a-light type="spot" color="#333" position="-20 0 0" look-at="a-box"></a-light>
       <a-light type="point" color="#AAA" position="0 5 0"></a-light> -->
 
 
-      <a-box id="boxyhart" position="3.5759866544022314 -1.7922944645166807 0" rotation="0 00 0" color="#4CC3D9" src="#metal_grill" scale-on-click="to: 0.5 0.5 0.5">
+      <!-- <a-box id="boxyhart" position="3.5759866544022314 -1.7922944645166807 0" rotation="0 00 0" color="#4CC3D9" src="#metal_grill" scale-on-click="to: 0.5 0.5 0.5">
         <a-animation attribute="rotation" begin="click"  to="0 90 0"></a-animation>
-      </a-box>
+      </a-box> -->
+
         <!-- <a-box id="boxy" depth=1 position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
       <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
       <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
       <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane> -->
-      <a-sky color="#ECECEC"></a-sky>
 
       <a-entity id="enemies">
-        <a-entity id="enemy-grunts">
+        <a-entity id="enemy-pawns">
         </a-entity>
         <a-entity id="enemy-orbiters">
         </a-entity>
