renamed math.js to gamemath.js to avoid confusion with actual Math libraries

--- a/index.html
+++ b/index.html
@@ -13,10 +13,15 @@
   <body>
     <a-scene>
       <a-assets>
+        <!-- Images. -->
         <img id="metal_grill" src="assets/metal_grill.jpg">
         <img id="platform" src="assets/metal-texture.jpg">
         <img id="shield" src="assets/hexagon-pattern.png">
         <img id="city" src="assets/city.jpg">
+
+        <!-- Audio. -->
+        <audio id="explosion" src="assets/270308__littlerobotsoundfactory__explosion-00.wav">
+        <!-- <audio id="laser" src="> -->
       </a-assets>
 
       <!-- Sky. -->
@@ -58,7 +63,7 @@
       </a-camera>
     </a-scene>
 
-    <script src="js/math.js"></script>
+    <script src="js/gamemath.js"></script>
     <script src="js/main.js"></script>
     <script src="js/enemies.js"></script>
     <script src="js/player.js"></script>
