--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
     <meta charset="utf-8">
     <title>Hello, World! - A-Frame</title>
     <meta name="description" content="Hello, World! - A-Frame">
-    <script src="https://aframe.io/releases/0.3.2/aframe.min.js"></script>
+
+    <!-- Break glass in case of JQuery. -->
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script> -->
 
-    <!-- ripped from "open sources" (i.e. i did not make these) -->
+    <!-- A-Frame scripts not made by me. -->
+      <!-- this makes the magic happen. -->
+    <script src="https://aframe.io/releases/0.3.2/aframe.min.js"></script>
+      <!-- this makes text magic happen. -->
+    <script src="https://rawgit.com/bryik/aframe-bmfont-text-component/master/dist/aframe-bmfont-text-component.min.js"></script>
+      <!-- this makes a ground happen? -->
     <!-- <script src="components/ground.js"></script> -->
+
   </head>
   <body>
     <a-scene>
@@ -63,9 +70,10 @@
       </a-camera>
     </a-scene>
 
-    <script src="js/gamemath.js"></script>
-    <script src="js/main.js"></script>
-    <script src="js/enemies.js"></script>
-    <script src="js/player.js"></script>
+    <script src="js/game-math.js"></script> <!-- loads calculations made for the game -->
+    <script src="js/enemies.js"></script> <!-- loads enemy functions -->
+    <script src="js/player.js"></script> <!-- loads player functions -->
+    <script src="js/game-menu.js"></script> <!-- loads game menu functions -->
+    <script src="js/main.js"></script> <!-- loads game states -->
   </body>
 </html>
