startRound() now includes toggling visibility of menu plane

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         <!-- Audio. -->
         <audio id="explosion" src="assets/270308__littlerobotsoundfactory__explosion-00.wav">
-        <!-- <audio id="laser" src="> -->
+        <!-- <audio id="laser" src=""> -->
       </a-assets>
 
       <!-- Sky. -->
@@ -37,11 +37,24 @@
       <!-- New lights. -->
       <!-- <a-light type="spot" color="#333" position="-20 0 0" look-at="a-box"></a-light> -->
       <!-- <a-light type="point" color="#AAA" position="0 5 0"></a-light> -->
+      <a-entity id="menu" position="0 1.7 -2" visible="true">
+        <a-plane id="screen" width="2" color="cyan" opacity="0.5">
+          <a-plane id="start" class="button" position="0 0 0.25" width="1" height="0.2"
+            color="cyan" opacity="0.5" onclick="startRound();">
+            <a-entity id="upper-text" position="-0.4 -0.035 0" scale="0.5 0.5 0.5"
+              color="#ffffff" opacity="0.2" align="center"
+              bmfont-text="text: START ROUND">
+            </a-entity>
+          </a-plane>
+        </a-plane>
 
 
-      <!-- <a-box id="boxyhart" position="3.5759866544022314 -1.7922944645166807 0" rotation="0 00 0" color="#4CC3D9" src="#metal_grill" scale-on-click="to: 0.5 0.5 0.5">
-        <a-animation attribute="rotation" begin="click"  to="0 90 0"></a-animation>
-      </a-box> -->
+
+        <!-- <a-entity id="lower-text" position="0 0 0" scale="0.5 0.5 0.5" color="#ffffff" opacity="0.2" align="center"
+          bmfont-text="text: YES">
+        </a-entity> -->
+
+      </a-entity>
 
       <a-entity id="enemies">
         <a-entity id="enemy-pawns">
@@ -51,9 +64,9 @@
       </a-entity>
 
       <a-entity id="player" collider-check>
-        <a-entity raycaster="objects: .collidable" position="0 -0.9 0" rotation="90 0 0"></a-entity>
+        <!-- <a-entity raycaster="objects: .collidable" position="0 -0.9 0" rotation="90 0 0"></a-entity> -->
       </a-entity>
-      <a-entity class="collidable" geometry="primitive: box" position="1 0 0"></a-entity>
+      <!-- <a-entity class="collidable" geometry="primitive: box" position="1 0 0"></a-entity> -->
 
       <!-- <a-entity id="crows-nest">
         <a-cone id="platform" position="0 0 0" radius-bottom="2", radius-top="1.5" height="0.5" src="#platform"></a-cone>
