--- a/index.html
+++ b/index.html
@@ -50,9 +50,17 @@
             bmfont-text="text: LASER EYE BEAM SIMULATOR">
           </a-entity>
 
-          <a-entity id="upper-text" position="-0.9 0.3 0.05"
+          <a-entity id="text-line-1" position="-0.9 0.3 0.05"
             scale="0.5 0.5 0.5" color="#fff" opacity="0.2" align="left"
             bmfont-text="text: > START ROUND?">
+          </a-entity>
+          <a-entity id="text-line-2" position="-0.9 0.2 0.05"
+            scale="0.5 0.5 0.5" color="#fff" opacity="0.2" align="left"
+            bmfont-text="text: ">
+          </a-entity>
+          <a-entity id="text-line-3" position="-0.9 0.1 0.05"
+            scale="0.5 0.5 0.5" color="#fff" opacity="0.2" align="left"
+            bmfont-text="text: ">
           </a-entity>
 
           <a-plane id="prompt" class="option" position="0 -0.3 0.05" width="1.75" height="0.2"
