basic game state cycling good, need to account for elimination of all enemies now

--- a/index.html
+++ b/index.html
@@ -54,21 +54,23 @@
           </a-entity>
 
           <!-- Text entities. -->
-          <a-entity id="text-line-0" position="-0.9 0.3 0.05"
-            scale="0.5 0.5 0.5" color="#fff" opacity="0.2" align="left"
-            bmfont-text="text: > START GAME?">
-          </a-entity>
-          <a-entity id="text-line-1" position="-0.9 0.2 0.05"
-            scale="0.5 0.5 0.5" color="#fff" opacity="0.2" align="left"
-            bmfont-text="text: ">
-          </a-entity>
-          <a-entity id="text-line-2" position="-0.9 0.1 0.05"
-            scale="0.5 0.5 0.5" color="#fff" opacity="0.2" align="left"
-            bmfont-text="text: ">
-          </a-entity>
-          <a-entity id="text-line-3" position="-0.9 0.0 0.05"
-            scale="0.5 0.5 0.5" color="#fff" opacity="0.2" align="left"
-            bmfont-text="text: ">
+          <a-entity id="screen-text">
+            <a-entity id="text-line-0" position="-0.9 0.3 0.05"
+              scale="0.5 0.5 0.5" color="#fff" opacity="0.2" align="left"
+              bmfont-text="text: > START GAME?">
+            </a-entity>
+            <a-entity id="text-line-1" position="-0.9 0.2 0.05"
+              scale="0.5 0.5 0.5" color="#fff" opacity="0.2" align="left"
+              bmfont-text="text: ">
+            </a-entity>
+            <a-entity id="text-line-2" position="-0.9 0.1 0.05"
+              scale="0.5 0.5 0.5" color="#fff" opacity="0.2" align="left"
+              bmfont-text="text: ">
+            </a-entity>
+            <a-entity id="text-line-3" position="-0.9 0.0 0.05"
+              scale="0.5 0.5 0.5" color="#fff" opacity="0.2" align="left"
+              bmfont-text="text: ">
+            </a-entity>
           </a-entity>
 
           <!-- Prompt entities. -->
