--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <a-assets>
         <!-- Images. -->
         <img id="platform" src="assets/metal-texture.jpg">
+        <img id="sechelt" src="assets/sechelt.jpg">
         <img id="city" src="assets/city.jpg">
 
         <!-- Audio. -->
