--- a/index.html
+++ b/index.html
@@ -114,11 +114,11 @@
 
       <a-entity camera look-controls wasd-controls position="0 1.7 0">
         <a-cursor id="cursor"
-          event-set__1="_event: mouseenter; color: red"
-          event-set__2="_event: mouseleave; color: green"
-          raycaster="objects: .clickable"></a-cursor>
+          event-set__1="_event: mouseenter; color: red;"
+          event-set__2="_event: mouseleave; color: green;"
+          raycaster="objects: .clickable">
+        </a-cursor>
       </a-entity>
-
 
     </a-scene>
 
