started adding sound cues

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
         <img id="city" src="assets/city.jpg">
 
         <!-- Audio. -->
+        <audio id="blip" src="assets/361254__japanyoshithegamer__8-bit-countdown-ready.wav">
+        <audio id="chime" src="assets/361253__japanyoshithegamer__8-bit-countdown-go.wav">
         <audio id="explosion" src="assets/270308__littlerobotsoundfactory__explosion-00.wav">
         <audio id="roundover" src="assets/350982__cabled-mess__lose-c-06.wav">
         <!-- <audio id="laser" src=""> -->
