attempting to solve lack of audio on phone

--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
         <img id="city" src="assets/city.jpg">
 
         <!-- Audio. -->
-        <audio id="click" src="assets/191757__fins__button-8.wav"></audio>
-        <audio id="ready" src="assets/361254__japanyoshithegamer__8-bit-countdown-ready.wav">
-        <audio id="go" src="assets/361253__japanyoshithegamer__8-bit-countdown-go.wav">
-        <audio id="bgm" src="assets/339124__zagi2__gaming-arcade-loop.wav" loop>
-        <audio id="explosion" src="assets/270308__littlerobotsoundfactory__explosion-00.wav">
-        <audio id="roundover" src="assets/350982__cabled-mess__lose-c-06.wav">
+        <audio id="click" crossorigin="anonymous" src="assets/191757__fins__button-8.wav"></audio>
+        <audio id="ready" crossorigin="anonymous" src="assets/361254__japanyoshithegamer__8-bit-countdown-ready.wav">
+        <audio id="go" crossorigin="anonymous" src="assets/361253__japanyoshithegamer__8-bit-countdown-go.wav">
+        <audio id="bgm" crossorigin="anonymous" src="assets/339124__zagi2__gaming-arcade-loop.wav" loop>
+        <audio id="explosion" crossorigin="anonymous" src="assets/270308__littlerobotsoundfactory__explosion-00.wav">
+        <audio id="roundover" crossorigin="anonymous" src="assets/350982__cabled-mess__lose-c-06.wav">
         <!-- <audio id="laser" src=""> -->
 
         <!-- <script id="plane" type="text/nunjucks">
