--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Hello, World! - A-Frame</title>
+    <title>LASER EYES HECK YEAH - built with A-Frame</title>
     <meta name="description" content="Hello, World! - A-Frame">
 
     <!-- Break glass in case of JQuery. -->
