--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       <a-entity camera look-controls wasd-controls position="0 1.7 0">
         <a-cursor id="cursor"
           event-set__1="_event: mouseenter; color: red;"
-          event-set__2="_event: mouseleave; color: green;"
+          event-set__2="_event: mouseleave; color: blue;"
           raycaster="objects: .clickable">
         </a-cursor>
       </a-entity>
