--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
             </a-entity>
             <a-entity id="text-line-1" position="-0.9 0.2 0.05"
               scale="0.5 0.5 0.5" color="#fff" opacity="0.2" align="left"
-              bmfont-text="text: ">
+              bmfont-text="text: > COMPUTER USERS: CLICK AND DRAG">
             </a-entity>
             <a-entity id="text-line-2" position="-0.9 0.1 0.05"
               scale="0.5 0.5 0.5" color="#fff" opacity="0.2" align="left"
-              bmfont-text="text: ">
+              bmfont-text="text: > TO MOVE YOUR CAMERA">
             </a-entity>
             <a-entity id="text-line-3" position="-0.9 0.0 0.05"
               scale="0.5 0.5 0.5" color="#fff" opacity="0.2" align="left"
