--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             </a-entity>
             <a-entity id="text-line-3" position="-0.9 0.0 0.05"
               scale="0.5 0.5 0.5" color="#fff" opacity="0.2" align="left"
-              bmfont-text="text: ">
+              bmfont-text="text: > AIM WITH THE CIRCLE CURSOR">
             </a-entity>
           </a-entity>
 
